--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,16 +1,32 @@
-name: My First Workflow
+name: Multiple jobs workflow
 
 on: push
 
 jobs:
-  first_job:
+  job_build:
     runs-on: ubuntu-latest
     steps:
-      - name: Welcome message
-        run: echo "Hello, world!"
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: List files
-        run: ls -a
+      - name: Install Cowsay command
+        run: sudo apt-get install cowsay -y
+      - name: Execute Cowsay command
+        run: cowsay -f dragon "run for cover, I'm a dragon" >> dragon.txt
+      - name: Sleep for 5 seconds
+        run: sleep 5
+
+  job_test:
+    runs-on: ubuntu-latest
+    needs: job_build
+    steps:
+      - name: Sleep 10 seconds
+        run: sleep 10
+      - name: Test file exists
+        run: grep -i "dragon" dragon.txt
+
+  job_deploy:
+    runs-on: ubuntu-latest
+    needs: [job_build, job_test]
+    steps:
       - name: Read file
-        run: cat README.md
+        run: cat dragon.txt
+      - name: Deploy
+        run: echo "Deploying..."
