--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,41 +1,18 @@
-name: Multiple jobs workflow
+name: Explore variables and secrets
 
 on: push
+
+env:
+  CONTAINER_REGISTRY: docker.io
+  IMAGE_NAME: myimage
 
 jobs:
   job_build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Cowsay command
-        run: sudo apt-get install cowsay -y
-      - name: Execute Cowsay command
-        run: cowsay -f dragon "run for cover, I'm a dragon" >> dragon.txt
-      - name: Store artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifact
-          path: ./dragon.txt
-
-  job_test:
-    runs-on: ubuntu-latest
-    needs: job_build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
-      - name: Test file exists
-        run: grep -i "dragon" dragon.txt
-
-  job_deploy:
-    runs-on: ubuntu-latest
-    needs: [job_build, job_test]
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
-      - name: Read file
-        run: cat dragon.txt
-      - name: Deploy
-        run: echo "Deploying..."
+      - name: Build Docker image
+        run: echo "docker build -t $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest ."
+      - name: Docker login
+        run: echo "docker login -u {{ vars.DOCKER_USERNAME }} -p {{ secrets.DOCKER_PASSWORD }}"
+      - name: Docker push
+        run: echo "docker push $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest"
