--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build Docker image
-        run: echo "docker build -t $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest ."
+        run: echo docker build -t $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
       - name: Docker login
-        run: echo "docker login -u {{ vars.DOCKER_USERNAME }} -p {{ secrets.DOCKER_PASSWORD }}"
+        run: echo docker login -u {{ vars.DOCKER_USERNAME }} -p {{ secrets.DOCKER_PASSWORD }}
       - name: Docker push
-        run: echo "docker push $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest"
+        run: echo docker push $CONTAINER_REGISTRY/{{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
