--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,34 +1,29 @@
-name: Explore Github Action events
-on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+name: Explore variables and secrets
+
+on: workflow_dispatch
+
+env:
+  CONTAINER_REGISTRY: docker.io
+  IMAGE_NAME: myimage
 
 jobs:
-  log-the-inputs:
+  job_build:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+      - name: Build Docker image
+        run: echo "docker build -t $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest ."
+      - name: Docker login
+        run: echo "docker login -u ${{ vars.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}"
+      - name: Docker push
+        run: echo "docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest"
+
+  job_deploy:
+    runs-on: ubuntu-latest
+    needs: [job_build, job_test]
+    steps:
+      - name: Sleep
+        run: sleep 300
+      - name: Read file
+        run: cat dragon.txt
+      - name: Deploy
+        run: echo "Deploying..."
