--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,8 +18,11 @@ jobs:
         run: echo "docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest"
 
   job_deploy:
+    needs: [job_build]
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     runs-on: ubuntu-latest
-    needs: [job_build, job_test]
     steps:
       - name: Sleep
         run: sleep 300
