Update workflow concurrency

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -21,7 +21,7 @@ jobs:
     needs: [job_build]
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
-      cancel-in-progress: true
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     steps:
       - name: Sleep
