Update workflow command

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Docker details
-        uses: docker info
+        run: docker info
 
       - name: Deploy image on ${{ matrix.os }}
         run: docker run ${{ matrix.image }}
