--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,30 +1,26 @@
-name: Matrix for jobs
-
-on:
-  push:
-  workflow_dispatch:
-
+name: Multiple jobs workflow
+on: push
 jobs:
-  job_test:
-    strategy:
-      fail-fast: false
-      # Max 2 jobs run at a time, other jobs will be queued
-      max-parallel: 2
-      matrix:
-        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
-        image: [hello-world, alpine]
-        # Don't run alpine image on windows-latest
-        exclude:
-          - os: windows-latest
-            image: alpine
-        # Run only another image: amd/alpine on ubuntu-20.04
-        include:
-          - os: ubuntu-20.04
-            image: amd64/alpine
-    runs-on: ${{ matrix.os }}
+  job_build: 
+    runs-on: ubuntu-latest
     steps:
-      - name: Docker details
-        run: docker info
-
-      - name: Deploy image on ${{ matrix.os }}
-        run: docker run ${{ matrix.image }}
+      - name: Install Cowsay command
+        run: sudo apt-get install cowsay -y
+      - name: Execute Cowsay command
+        run: cowsay -f dragon "run for cover, I'm a dragon" >> dragon.txt
+      - name: Sleep for 5 seconds
+        run: sleep 5
+  job_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sleep 10 seconds
+        run: sleep 10
+      - name: Test file exists
+        run: grep -i "dragon" dragon.txt
+  job_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Read file
+        run: cat dragon.txt
+      - name: Deploy
+        run: echo "Deploying..."
