--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -12,6 +12,7 @@ jobs:
         run: sleep 5
   job_test:
     runs-on: ubuntu-latest
+    needs: job_build
     steps:
       - name: Sleep 10 seconds
         run: sleep 10
@@ -19,6 +20,7 @@ jobs:
         run: grep -i "dragon" dragon.txt
   job_deploy:
     runs-on: ubuntu-latest
+    needs: [job_build, job_test]
     steps:
       - name: Read file
         run: cat dragon.txt
