--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,27 +1,40 @@
 name: Multiple jobs workflow
+
 on: push
+
 jobs:
-  job_build: 
+  job_build:
     runs-on: ubuntu-latest
     steps:
       - name: Install Cowsay command
         run: sudo apt-get install cowsay -y
       - name: Execute Cowsay command
         run: cowsay -f dragon "run for cover, I'm a dragon" >> dragon.txt
-      - name: Sleep for 5 seconds
-        run: sleep 5
+      - name: Store artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: ./dragon.txt
+
   job_test:
     runs-on: ubuntu-latest
     needs: job_build
     steps:
-      - name: Sleep 10 seconds
-        run: sleep 10
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
       - name: Test file exists
         run: grep -i "dragon" dragon.txt
+
   job_deploy:
     runs-on: ubuntu-latest
     needs: [job_build, job_test]
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
       - name: Read file
         run: cat dragon.txt
       - name: Deploy
